fixing font color on mobile

--- a/src/pages/Sekcje/fun.scss
+++ b/src/pages/Sekcje/fun.scss
@@ -38,6 +38,9 @@ $black: #000;
             color: black;
 
         }
+        u {
+            color:black;
+        }
 
     }
 
